test/libsolidity/syntaxTests/freeFunctions/free_override.sol
function fun() override {
}
// ----
// SyntaxError 1750: (0-27='function fun() override { }'): Free functions cannot override.
